[gd_scene load_steps=3 format=2]

[ext_resource path="res://PartyCreator.gd" type="Script" id=1]
[ext_resource path="res://Pokemon_Button.tscn" type="PackedScene" id=2]

[node name="PartyCreator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -288.0
margin_right = 500.0
margin_bottom = 288.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 16.0
margin_right = -500.0
margin_bottom = -68.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 488.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 520.0
margin_right = -816.0
margin_bottom = -12.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"

[node name="Parties" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 623.0
margin_top = 56.0
margin_right = -92.0
margin_bottom = -88.0
__meta__ = {
"_edit_group_": true
}

[node name="Party1" type="GridContainer" parent="Panel/Parties"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Parties/Party1"]
margin_right = 136.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Member1" parent="Panel/Parties/Party1/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 129.0

[node name="Member3" parent="Panel/Parties/Party1/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 136.0
margin_bottom = 262.0

[node name="Member5" parent="Panel/Parties/Party1/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 266.0
margin_right = 136.0
margin_bottom = 396.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Parties/Party1"]
margin_left = 140.0
margin_right = 276.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Member2" parent="Panel/Parties/Party1/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 136.0
margin_bottom = 129.0

[node name="Member4" parent="Panel/Parties/Party1/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 136.0
margin_bottom = 262.0

[node name="Member6" parent="Panel/Parties/Party1/VBoxContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 266.0
margin_right = 136.0
margin_bottom = 396.0

[connection signal="pressed" from="Panel/Back" to="." method="_on_Back_pressed"]
