[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/PartyCreator.gd" type="Script" id=1]
[ext_resource path="res://scenes/Party.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PartyViewer.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/ui/icons/party_remove_icon.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/icons/party_add_icon.png" type="Texture" id=5]
[ext_resource path="res://addons/native_dialogs/bin/native_dialog_message.gdns" type="Script" id=6]

[node name="PartyCreator" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -272.0
margin_right = 181.0
margin_bottom = 272.0
rect_min_size = Vector2( 362, 544 )
popup_exclusive = true
window_title = "Party Creator"
resizable = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Parties" type="TabContainer" parent="Panel"]
anchor_left = 0.0625
anchor_top = 0.0533333
anchor_right = 0.938477
anchor_bottom = 0.841667
margin_bottom = 3.05176e-05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Party 1" parent="Panel/Parties" instance=ExtResource( 2 )]

[node name="AddParty" type="Button" parent="Panel"]
anchor_left = 0.831492
anchor_top = 0.871324
anchor_right = 0.944751
anchor_bottom = 0.957721
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RemoveParty" type="Button" parent="Panel"]
anchor_left = 0.0580111
anchor_top = 0.871324
anchor_right = 0.168508
anchor_bottom = 0.959559
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Export" type="Button" parent="Panel"]
anchor_left = 0.190608
anchor_top = 0.871324
anchor_right = 0.809392
anchor_bottom = 0.908088
text = "Copy to Clipboard"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="View" type="Button" parent="Panel"]
anchor_left = 0.190608
anchor_top = 0.920956
anchor_right = 0.809392
anchor_bottom = 0.957721
disabled = true
text = "View"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PartyViewer" parent="." instance=ExtResource( 3 )]
visible = false

[node name="NativeDialogMessage" type="Node" parent="."]
script = ExtResource( 6 )
title = "Success!"
text = "Successfully copied current party to your clipboard. Enjoy your battle!"
choice = 0

[connection signal="popup_hide" from="." to="." method="_on_PartyCreator_popup_hide"]
[connection signal="visibility_changed" from="." to="." method="_on_PartyCreator_visibility_changed"]
[connection signal="tab_changed" from="Panel/Parties" to="." method="_on_Parties_tab_changed"]
[connection signal="pressed" from="Panel/AddParty" to="." method="_on_AddParty_pressed"]
[connection signal="pressed" from="Panel/RemoveParty" to="." method="_on_RemoveParty_pressed"]
[connection signal="pressed" from="Panel/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="Panel/View" to="." method="_on_View_pressed"]
